// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarms-expand-panel-tour Renders \`alarms-expand-panel-tour\` after finish 1`] = `
<div
  class="v-tour"
>
  <!---->
</div>
`;

exports[`alarms-expand-panel-tour Renders \`alarms-expand-panel-tour\` with first step 1`] = `
<div
  class="v-tour"
>
  <div
    class="v-step"
    id="v-step-b2b95c8a"
  >
    <!---->
     
    <div
      class="v-step__content"
    >
      <div>
        Details
      </div>
    </div>
     
    <div
      class="v-step__buttons"
    >
      <button
        class="v-step__button v-step__button-skip"
      >
        Skip tour
      </button>
       
      <!---->
       
      <button
        class="v-step__button v-step__button-next"
      >
        Next
      </button>
       
      <!---->
    </div>
     
    <div
      class="v-step__arrow"
    />
  </div>
</div>
`;

exports[`alarms-expand-panel-tour Renders \`alarms-expand-panel-tour\` with second step 1`] = `
<div
  class="v-tour"
>
  <div
    class="v-step"
    id="v-step-b2b95c88"
  >
    <!---->
     
    <div
      class="v-step__content"
    >
      <div>
        MoreInfos tab (Displayed only in case of existing confguration)
      </div>
    </div>
     
    <div
      class="v-step__buttons"
    >
      <button
        class="v-step__button v-step__button-skip"
      >
        Skip tour
      </button>
       
      <button
        class="v-step__button v-step__button-previous"
      >
        Previous
      </button>
       
      <button
        class="v-step__button v-step__button-next"
      >
        Next
      </button>
       
      <!---->
    </div>
     
    <div
      class="v-step__arrow"
    />
  </div>
</div>
`;

exports[`alarms-expand-panel-tour Renders \`alarms-expand-panel-tour\` with third step 1`] = `
<div
  class="v-tour"
>
  <div
    class="v-step"
    id="v-step-b2b95c86"
  >
    <!---->
     
    <div
      class="v-step__content"
    >
      <div>
        Timeline tab
      </div>
    </div>
     
    <div
      class="v-step__buttons"
    >
      <!---->
       
      <button
        class="v-step__button v-step__button-previous"
      >
        Previous
      </button>
       
      <!---->
       
      <button
        class="v-step__button v-step__button-stop"
      >
        Finish
      </button>
    </div>
     
    <div
      class="v-step__arrow"
    />
  </div>
</div>
`;
